...
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="vqo-XP-jUd" secondAttribute="height" id="eLm-P4-Qzd"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kfR-rY-TIH">
                                <rect key="frame" x="20" y="700" width="374" height="30"/>
                                <state key="normal" title="點擊"/>
                                <connections>
                                    <action selector="btnTest:" destination="2YI-jP-K8w" eventType="touchUpInside" id="B5L-HK-fc0"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="83b-6K-SgM">
                                <rect key="frame" x="15" y="206" width="384" height="30"/>
...
                    <view key="view" contentMode="scaleToFill" id="847-Pf-1bh">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gOW-as-jem">
                                <rect key="frame" x="184" y="433" width="46" height="30"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="btnAction:" destination="cFd-O3-Qsg" eventType="touchUpInside" id="7jO-js-Hhg"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
